Allow timed ingress actions to produce annotations